cirrus: Bump FreeBSD version and remove curl from dependencies
Remove macOS build. There is something weird going on:

ld: warning: ignoring file /private/var/folders/xx/vl5f934s6k927z1vyyl9cxth0000gn/T/cirrus-ci-build/_build/libcurl.a, building for macOS-x86_64 but attempting to link with file built for macOS-x86_64
Undefined symbols for architecture x86_64:
  "_curl_easy_cleanup", referenced from:
      _check_multi_info in libparfetch.a(parfetch.o)
  "_curl_easy_getinfo", referenced from:
      _check_multi_info in libparfetch.a(parfetch.o)
  "_curl_easy_init", referenced from:
      _fetch_distfile in libparfetch.a(parfetch.o)
  "_curl_easy_setopt", referenced from:
      _fetch_distfile in libparfetch.a(parfetch.o)
  "_curl_easy_strerror", referenced from:
      _check_multi_info in libparfetch.a(parfetch.o)
  "_curl_global_cleanup", referenced from:
      _main in libparfetch.a(parfetch.o)
  "_curl_global_init", referenced from:
      _main in libparfetch.a(parfetch.o)
  "_curl_multi_add_handle", referenced from:
      _fetch_distfile in libparfetch.a(parfetch.o)
  "_curl_multi_assign", referenced from:
      _handle_socket in libparfetch.a(loop.o)
  "_curl_multi_cleanup", referenced from:
      _main in libparfetch.a(parfetch.o)
  "_curl_multi_info_read", referenced from:
      _check_multi_info in libparfetch.a(parfetch.o)
  "_curl_multi_init", referenced from:
      _main in libparfetch.a(parfetch.o)
  "_curl_multi_remove_handle", referenced from:
      _check_multi_info in libparfetch.a(parfetch.o)
  "_curl_multi_setopt", referenced from:
      _main in libparfetch.a(parfetch.o)
      _parfetch_curl_new in libparfetch.a(loop.o)
  "_curl_multi_socket_action", referenced from:
      _on_timeout in libparfetch.a(loop.o)
      _curl_perform in libparfetch.a(loop.o)
ld: symbol(s) not found for architecture x86_64

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,11 +1,11 @@
 freebsd_task:
   freebsd_instance:
-    image_family: freebsd-12-2
+    image_family: freebsd-12-3
   env:
     CIRRUS_CLONE_SUBMODULES: true
   deps_script:
     - sed -i.bak -e 's,/quarterly,/latest,' /etc/pkg/FreeBSD.conf
-    - pkg install -y samurai pkgconf curl libevent
+    - pkg install -y samurai pkgconf libevent
   matrix:
     - name: freebsd_clang
       test_script:
@@ -23,7 +23,7 @@ linux_task:
   env:
     CIRRUS_CLONE_SUBMODULES: true
   deps_script:
-    - apt-get update && apt-get -y install bash ninja-build libssl-dev libcurl4-openssl-dev pkg-config libevent-dev
+    - apt-get update && apt-get -y install bash ninja-build libssl-dev pkg-config libevent-dev
   matrix:
     - name: linux_clang
       clang_script:
@@ -35,21 +35,3 @@ linux_task:
       test_script:
         - ./configure CC=gcc || cat _build/.mkbuild/config.log
         - ninja -C_build parfetch
-
-macos_task:
-  osx_instance:
-    image: monterey-base
-  env:
-    CIRRUS_CLONE_SUBMODULES: true
-    PKG_CONFIG_PATH: /usr/local/opt/curl/lib/pkgconfig:/usr/local/opt/libevent/lib/pkgconfig:/usr/local/opt/openssl@1.1/lib/pkgconfig
-  deps_script:
-    - brew install samurai pkg-config curl libevent
-  matrix:
-    - name: macos_clang
-      test_script:
-        - ./configure CC=clang || cat _build/.mkbuild/config.log
-        - samu -C_build parfetch
-    - name: macos_gcc
-      test_script:
-        - ./configure CC=gcc || cat _build/.mkbuild/config.log
-        - samu -C_build parfetch
